Don't use JDK 11 classes on JDK 8